Fixes an issue with Session view icons that have wrong width - Refs #7884

--- a/app/Resources/public/css/base.css
+++ b/app/Resources/public/css/base.css
@@ -5602,7 +5602,7 @@ div#chat-remote-video video {
 }
 
 img.sessionView {
-  padding-right: 10px;
+  margin-right: 10px;
 }
 
 a.sessionView {
